@@ -117,7 +117,46 @@ ansible.extra_vars = {
 #### Things to Note:
 If there are raw xml config files that you want to be copied to Jenkins. Then simply adding them to the `provisioners/ansible/files/jenkins/config` directory will get them to jenkins for pre-configuration.
 
-#### 1.6 Optional Installs
+#### 1.6 Configure Jenkins Memory
+
+Configure the heap size Jenkins will be assigned on startup.
+
+- `enable_configure`: This flag tells the playbook to enable security for the Jenkins instance. If false, the playbook will skip enabling security.
+- `maxPermSize`: Assign the MaxPermSize that jenkins will be assigned ("-XX:MaxPermSize=512m")
+- `memory`: sets the heap size assigned to jenkins ('-Xmx1024m')
+
+eg.
+
+```yaml
+# override/set ansible vars here
+ansible.extra_vars = {
+  jenkins_opts:{
+    enable_configure: true,
+    maxPermSize: 512, # cannot be less than 512
+    memory: 1024 # cannot be less than 256
+  }
+}
+```
+
+#### 1.7 Install global npm packages
+
+- `global_packages`: This is a space delimited list of npm packges eg. 'bower grunt-cli'
+
+
+eg.
+
+```yaml
+# override/set ansible vars here
+ansible.extra_vars = {
+  npm:{
+    # packages is a space delimited list eg. 'bower grunt-cli'
+    # bower, grunt-cli and istanbul are installed by default
+    global_packages: ""
+  }
+}
+```
+
+#### 1.8 Optional Installs
 
 * ansible.extra_vars.mongo.install (Boolean): `Default: false`
 
@@ -142,7 +181,7 @@ https://github.com/mitchellh/vagrant-aws
 `jenkins-autojobs`, `dotcloud`, `robotframework-selenium2library`
 
 ### NPM Global Packages
-`bower`, `grunt-cli`
+`istanbul`, `bower`, `grunt-cli`
 
 ## Known Issues
 
